--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             ></span>
           </h1>
 
-          <a href="assets/img/resume.pdf" download class="button">Resume</a>
+          <a href="assets/Rahul Resume.pdf" download class="button">Resume</a>
         </div>
 
         <div class="home__social">
