--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <h2 class="section-title">Projects</h2>
 
         <div class="work__container bd-grid">
-          <a href="https://netflix-clone-rs.netlify.app/">
+          <a href="https://nf-rs.netlify.app/">
             <div class="work__img">
               <img src="assets/img/Screenshot 2024-03-16 220514.png" alt="" />
             </div>
