--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             ></span>
           </h1>
 
-          <a href="assets/Rahul Resume.pdf" download class="button">Resume</a>
+          <a href="assets/Rahul's Resume.pdf" download class="button">Resume</a>
         </div>
       </section>
 
@@ -83,10 +83,7 @@
 
         <div class="about__container bd-grid">
           <div class="about__img">
-            <img
-              src="assets/img/WhatsApp Image 2024-03-16 at 10.14.59 PM (1).jpeg"
-              alt=""
-            />
+            <img src="assets/img/IMG_20230410_190540_878.jpg" alt="" />
           </div>
 
           <div>
@@ -307,11 +304,14 @@
       </section>
       <!--========Certificate section-->
       <section class="Certificate section" id="Certificate">
-        <h2 class="section-title">Achievement</h2>
+        <h2 class="section-title">Internship</h2>
         <div class="Certificate__container bd-grid">
           <a href="">
             <div class="certificate__img" style="margin-left: 77px">
-              <img src="assets/img/Screenshot 2024-03-18 005543.png" alt="" />
+              <img
+                src="assets/img/Rahul Sunkara Internship Certificate Next24tech.jpg"
+                alt=""
+              />
             </div>
           </a>
         </div>
@@ -321,7 +321,17 @@
         <h2 class="section-title">Contact</h2>
 
         <div class="contact__container bd-grid">
-          <form name="submit-to-google-sheet" class="contact__form">
+          <form
+            action="https://api.web3forms.com/submit"
+            method="POST"
+            name="submit-to-google-sheet"
+            class="contact__form"
+          >
+            <input
+              type="hidden"
+              name="access_key"
+              value="1ec70502-4781-45df-89fa-ccb7854aaad6"
+            />
             <input
               type="text"
               name="Name"
