Resume and Certificate uploaded

--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
         <div class="work__container bd-grid">
           <div class="familiar_cont">
             <img
+              src="assets/img/java-logo-1.png"
+              alt=""
+              class="familiar__img"
+              width="100px"
+              height="100px"
+            />
+            <h2 class="familiar__subtitle">JAVA</h2>
+          </div>
+          <div class="familiar_cont">
+            <img
               src="assets/img/html.jpg"
               alt=""
               class="familiar__img"
@@ -307,10 +317,11 @@
         <h2 class="section-title">Internship</h2>
         <div class="Certificate__container bd-grid">
           <a href="">
-            <div class="certificate__img" style="margin-left: 77px">
+            <div class="certificate__img">
               <img
                 src="assets/img/Rahul Sunkara Internship Certificate Next24tech.jpg"
                 alt=""
+                width="1000px"
               />
             </div>
           </a>
