--- a/index.html
+++ b/index.html
@@ -143,6 +143,16 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxs-paint skills__icon"></i>
+                <span class="skills__name">JAVA</span>
+              </div>
+              <div class="skills__bar skills__dsa"></div>
+              <div>
+                <span class="skills__percentage"></span>
+              </div>
+            </div>
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="bx bxs-paint skills__icon"></i>
                 <span class="skills__name">HTML</span>
               </div>
               <div class="skills__bar skills__dsa"></div>
