--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             ></span>
           </h1>
 
-          <a href="assets/Rahul's Resume.pdf" download class="button">Resume</a>
+          <a href="assets/Rahul_Sunkara_Resume.pdf" download class="button"
+            >Resume</a
+          >
         </div>
       </section>
 
