--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <p class="qualif__text">
                     Btech , Electronics and Commmunication Engineering
                   </p>
-                  <p class="qualif__text">6.5 CGPA till (7th sem)</p>
+                  <p class="qualif__text">6.4 CGPA</p>
                 </div>
               </div>
               <div>
@@ -192,37 +192,7 @@
                 <span class="skills__percentage"></span>
               </div>
             </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="bx bxs-paint skills__icon"></i>
-                <span class="skills__name">Python</span>
-              </div>
-              <div class="skills__bar skills__os"></div>
-              <div>
-                <span class="skills__percentage"></span>
-              </div>
-            </div>
 
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="bx bxs-paint skills__icon"></i>
-                <span class="skills__name">C</span>
-              </div>
-              <div class="skills__bar skills__dbms"></div>
-              <div>
-                <span class="skills__percentage"></span>
-              </div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="bx bxs-paint skills__icon"></i>
-                <span class="skills__name">AWS Cloud</span>
-              </div>
-              <div class="skills__bar skills__oops"></div>
-              <div>
-                <span class="skills__percentage"></span>
-              </div>
-            </div>
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxs-paint skills__icon"></i>
@@ -303,20 +273,20 @@
         <h2 class="section-title">Projects</h2>
 
         <div class="work__container bd-grid">
-          <a href="https://nf-rs.netlify.app/">
+          <a href="https://e-commerce-rs.netlify.app">
             <div class="work__img">
-              <img src="assets/img/Screenshot 2024-03-16 220514.png" alt="" />
+              <img src="assets/img/e-commerce.png" alt="" />
             </div>
           </a>
           <a href="https://book-store-page-rs.netlify.app/">
             <div class="work__img">
-              <img src="assets/img/Screenshot 2024-03-18 150845.png" alt="" />
+              <img src="assets/img/book store.png" alt="" />
             </div>
           </a>
-          <a href="https://restaurant-page-rs.netlify.app/">
+          <a href="https://ministore-rs.netlify.app/">
             <div class="work__img">
               <img
-                src="assets/img/Screenshot 2024-03-18 151044.png"
+                src="assets/img/watch store.png"
                 alt=""
                 style="align-content: center"
               />
