--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <p class="qualif__text">
                     Btech , Electronics and Commmunication Engineering
                   </p>
-                  <p class="qualif__text">6.4 CGPA</p>
+                  <p class="qualif__text">6.39 CGPA</p>
                 </div>
               </div>
               <div>
@@ -296,6 +296,18 @@
       </section>
       <!--========Certificate section-->
       <section class="Certificate section" id="Certificate">
+        <h2 class="section-title">Training</h2>
+        <div class="Certificate__container bd-grid">
+          <a href="">
+            <div class="certificate__img">
+              <img
+                src="/assets/img/Jspiders Certificate.png"
+                alt=""
+                width="1000px"
+              />
+            </div>
+          </a>
+        </div>
         <h2 class="section-title">Internship</h2>
         <div class="Certificate__container bd-grid">
           <a href="">
@@ -308,7 +320,9 @@
             </div>
           </a>
         </div>
+        
       </section>
+      
       <!--===== CONTACT =====-->
       <section class="contact section" id="contact">
         <h2 class="section-title">Contact</h2>
